- se añaden dos botones. Alimentar y Acaricear.

--- a/public_html/mascota.html
+++ b/public_html/mascota.html
@@ -24,23 +24,19 @@ and open the template in the editor.
                     <img src="images/plato.jpg" alt="" class="img-back"/>
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
                         <br>
-                        <input type="button" onclick="start()" value="Alimentar" class="btn btn-primary"/>
+                        <input type="button" onclick="alimentar()" value="Alimentar" class="btn btn-primary"/>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4 form-group">
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <img class="img-back" src="images/perro1.png" alt=""/>
-                    </div>
-                    <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <br>
-                        <input type="button" onclick="start()" value="Start" class="btn btn-primary"/>
+                        <img class="img-mascota" id="mascota" src="images/MaxDuda.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4">
                     <img src="images/acariciar.jpg" alt="" class="img-back"/>
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
                         <br>
-                        <input type="button" onclick="start()" value="Start" class="btn btn-primary"/>
+                        <input type="button" onclick="acariciar()" value="Start" class="btn btn-primary"/>
                     </div>
                 </div>
             </div>
