--- a/public_html/mascota.html
+++ b/public_html/mascota.html
@@ -52,7 +52,7 @@ and open the template in the editor.
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title">Mensaje</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" onclick="inicio()" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -61,7 +61,7 @@ and open the template in the editor.
                     </div>
                     <div class="modal-footer">
                         <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" onclick="inicio()" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
