- Mascota Versión Uno(Entrega).

--- a/public_html/mascota.html
+++ b/public_html/mascota.html
@@ -20,29 +20,31 @@ and open the template in the editor.
         <div class="col-lg-12 col-sm-12 col-xl-12 content-back">
             <br><h2 class="name-mascota" id="name-mascota"></h2><br>
             <div class="row form-back">
-                <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4">
-                    <img src="images/plato.jpg" alt="" class="img-back"/>
+                <div class="col-lg-3 col-sm-3 col-md-3 col-xl-3">
+                    <img src="images/plato.png" alt="" class="img-back"/>
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <input type="button" onclick="alimentar()" value="Alimentar" class="btn btn-primary"/>
+                        <input type="button" onclick="alimentar()" value="Alimentar" class="btn btn-primary accion"/>
                     </div>
-                    <img src="images/lavar.jpg" alt="" class="img-back"/>
+                    <img src="images/lavar.png" alt="" class="img-back"/>
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <input type="button" onclick="bañar()" value="Bañar" class="btn btn-primary"/>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4 form-group">
-                    <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <img class="img-mascota" id="mascota" src="images/MaxDuda.jpg" alt=""/>
+                        <input type="button" onclick="bañar()" value="Bañar" class="btn btn-primary accion"/>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 col-md-4 col-xl-4">
-                    <img src="images/acariciar.jpg" alt="" class="img-back"/>
+                <div class="col-lg-6 col-sm-6 col-md-6 col-xl-6 form-group">
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <input type="button" onclick="acariciar()" value="Acariciar" class="btn btn-primary"/>
+                        <img class="img-mascota" id="mascota" src="images/Mascota/Normal3.png" alt=""/>
+                        <img class="img-efecto hidden" id="efecto" src="images/burbujas.png" alt=""/>
+                        <img class="img-efecto-correr hidden" id="efecto-correr" src="images/correr.gif" alt=""/>
                     </div>
-                    <img src="images/pasear.jpg" alt="" class="img-back"/>
+                </div>
+                <div class="col-lg-3 col-sm-3 col-md-3 col-xl-3">
+                    <img src="images/acariciar.png" alt="" class="img-back"/>
                     <div class="div-back col-lg-12 col-sm-12 col-xl-12">
-                        <input type="button" onclick="pasear()" value="Pasear" class="btn btn-primary"/>
+                        <input type="button" onclick="acariciar()" value="Acariciar" class="btn btn-primary accion"/>
+                    </div>
+                    <img src="images/pasear.png" alt="" class="img-back"/>
+                    <div class="div-back col-lg-12 col-sm-12 col-xl-12">
+                        <input type="button" onclick="pasear()" value="Pasear" class="btn btn-primary accion"/>
                     </div>
                 </div>
             </div>
